adding book at the end of linkedlist now worksgit add .

--- a/plist/main.plist
+++ b/plist/main.plist
@@ -6,9 +6,422 @@
 <string>(built by Brecht Sanders, r1) clang version 18.1.8</string>
  <key>diagnostics</key>
  <array>
+  <dict>
+   <key>path</key>
+   <array>
+    <dict>
+     <key>kind</key><string>control</string>
+     <key>edges</key>
+      <array>
+       <dict>
+        <key>start</key>
+         <array>
+          <dict>
+           <key>line</key><integer>287</integer>
+           <key>col</key><integer>3</integer>
+           <key>file</key><integer>0</integer>
+          </dict>
+          <dict>
+           <key>line</key><integer>287</integer>
+           <key>col</key><integer>13</integer>
+           <key>file</key><integer>0</integer>
+          </dict>
+         </array>
+        <key>end</key>
+         <array>
+          <dict>
+           <key>line</key><integer>288</integer>
+           <key>col</key><integer>3</integer>
+           <key>file</key><integer>0</integer>
+          </dict>
+          <dict>
+           <key>line</key><integer>288</integer>
+           <key>col</key><integer>12</integer>
+           <key>file</key><integer>0</integer>
+          </dict>
+         </array>
+       </dict>
+      </array>
+    </dict>
+    <dict>
+     <key>kind</key><string>event</string>
+     <key>location</key>
+     <dict>
+      <key>line</key><integer>288</integer>
+      <key>col</key><integer>3</integer>
+      <key>file</key><integer>0</integer>
+     </dict>
+     <key>ranges</key>
+     <array>
+       <array>
+        <dict>
+         <key>line</key><integer>288</integer>
+         <key>col</key><integer>3</integer>
+         <key>file</key><integer>0</integer>
+        </dict>
+        <dict>
+         <key>line</key><integer>288</integer>
+         <key>col</key><integer>23</integer>
+         <key>file</key><integer>0</integer>
+        </dict>
+       </array>
+     </array>
+     <key>depth</key><integer>0</integer>
+     <key>extended_message</key>
+     <string>Calling &apos;node__free&apos;</string>
+     <key>message</key>
+     <string>Calling &apos;node__free&apos;</string>
+    </dict>
+    <dict>
+     <key>kind</key><string>event</string>
+     <key>location</key>
+     <dict>
+      <key>line</key><integer>34</integer>
+      <key>col</key><integer>1</integer>
+      <key>file</key><integer>0</integer>
+     </dict>
+     <key>depth</key><integer>1</integer>
+     <key>extended_message</key>
+     <string>Entered call from &apos;main&apos;</string>
+     <key>message</key>
+     <string>Entered call from &apos;main&apos;</string>
+    </dict>
+    <dict>
+     <key>kind</key><string>control</string>
+     <key>edges</key>
+      <array>
+       <dict>
+        <key>start</key>
+         <array>
+          <dict>
+           <key>line</key><integer>34</integer>
+           <key>col</key><integer>1</integer>
+           <key>file</key><integer>0</integer>
+          </dict>
+          <dict>
+           <key>line</key><integer>34</integer>
+           <key>col</key><integer>4</integer>
+           <key>file</key><integer>0</integer>
+          </dict>
+         </array>
+        <key>end</key>
+         <array>
+          <dict>
+           <key>line</key><integer>35</integer>
+           <key>col</key><integer>3</integer>
+           <key>file</key><integer>0</integer>
+          </dict>
+          <dict>
+           <key>line</key><integer>35</integer>
+           <key>col</key><integer>6</integer>
+           <key>file</key><integer>0</integer>
+          </dict>
+         </array>
+       </dict>
+      </array>
+    </dict>
+    <dict>
+     <key>kind</key><string>control</string>
+     <key>edges</key>
+      <array>
+       <dict>
+        <key>start</key>
+         <array>
+          <dict>
+           <key>line</key><integer>35</integer>
+           <key>col</key><integer>3</integer>
+           <key>file</key><integer>0</integer>
+          </dict>
+          <dict>
+           <key>line</key><integer>35</integer>
+           <key>col</key><integer>6</integer>
+           <key>file</key><integer>0</integer>
+          </dict>
+         </array>
+        <key>end</key>
+         <array>
+          <dict>
+           <key>line</key><integer>36</integer>
+           <key>col</key><integer>3</integer>
+           <key>file</key><integer>0</integer>
+          </dict>
+          <dict>
+           <key>line</key><integer>36</integer>
+           <key>col</key><integer>8</integer>
+           <key>file</key><integer>0</integer>
+          </dict>
+         </array>
+       </dict>
+      </array>
+    </dict>
+    <dict>
+     <key>kind</key><string>event</string>
+     <key>location</key>
+     <dict>
+      <key>line</key><integer>36</integer>
+      <key>col</key><integer>3</integer>
+      <key>file</key><integer>0</integer>
+     </dict>
+     <key>ranges</key>
+     <array>
+       <array>
+        <dict>
+         <key>line</key><integer>36</integer>
+         <key>col</key><integer>3</integer>
+         <key>file</key><integer>0</integer>
+        </dict>
+        <dict>
+         <key>line</key><integer>36</integer>
+         <key>col</key><integer>16</integer>
+         <key>file</key><integer>0</integer>
+        </dict>
+       </array>
+     </array>
+     <key>depth</key><integer>1</integer>
+     <key>extended_message</key>
+     <string>Memory is released</string>
+     <key>message</key>
+     <string>Memory is released</string>
+    </dict>
+    <dict>
+     <key>kind</key><string>control</string>
+     <key>edges</key>
+      <array>
+       <dict>
+        <key>start</key>
+         <array>
+          <dict>
+           <key>line</key><integer>36</integer>
+           <key>col</key><integer>3</integer>
+           <key>file</key><integer>0</integer>
+          </dict>
+          <dict>
+           <key>line</key><integer>36</integer>
+           <key>col</key><integer>8</integer>
+           <key>file</key><integer>0</integer>
+          </dict>
+         </array>
+        <key>end</key>
+         <array>
+          <dict>
+           <key>line</key><integer>38</integer>
+           <key>col</key><integer>3</integer>
+           <key>file</key><integer>0</integer>
+          </dict>
+          <dict>
+           <key>line</key><integer>38</integer>
+           <key>col</key><integer>4</integer>
+           <key>file</key><integer>0</integer>
+          </dict>
+         </array>
+       </dict>
+      </array>
+    </dict>
+    <dict>
+     <key>kind</key><string>control</string>
+     <key>edges</key>
+      <array>
+       <dict>
+        <key>start</key>
+         <array>
+          <dict>
+           <key>line</key><integer>38</integer>
+           <key>col</key><integer>3</integer>
+           <key>file</key><integer>0</integer>
+          </dict>
+          <dict>
+           <key>line</key><integer>38</integer>
+           <key>col</key><integer>4</integer>
+           <key>file</key><integer>0</integer>
+          </dict>
+         </array>
+        <key>end</key>
+         <array>
+          <dict>
+           <key>line</key><integer>38</integer>
+           <key>col</key><integer>7</integer>
+           <key>file</key><integer>0</integer>
+          </dict>
+          <dict>
+           <key>line</key><integer>38</integer>
+           <key>col</key><integer>10</integer>
+           <key>file</key><integer>0</integer>
+          </dict>
+         </array>
+       </dict>
+      </array>
+    </dict>
+    <dict>
+     <key>kind</key><string>event</string>
+     <key>location</key>
+     <dict>
+      <key>line</key><integer>38</integer>
+      <key>col</key><integer>7</integer>
+      <key>file</key><integer>0</integer>
+     </dict>
+     <key>ranges</key>
+     <array>
+       <array>
+        <dict>
+         <key>line</key><integer>38</integer>
+         <key>col</key><integer>7</integer>
+         <key>file</key><integer>0</integer>
+        </dict>
+        <dict>
+         <key>line</key><integer>38</integer>
+         <key>col</key><integer>16</integer>
+         <key>file</key><integer>0</integer>
+        </dict>
+       </array>
+     </array>
+     <key>depth</key><integer>1</integer>
+     <key>extended_message</key>
+     <string>Use of memory after it is freed</string>
+     <key>message</key>
+     <string>Use of memory after it is freed</string>
+    </dict>
+   </array>
+   <key>description</key><string>Use of memory after it is freed</string>
+   <key>category</key><string>Memory error</string>
+   <key>type</key><string>Use-after-free</string>
+   <key>check_name</key><string>cplusplus.NewDelete</string>
+   <!-- This hash is experimental and going to change! -->
+   <key>issue_hash_content_of_line_in_context</key><string>76d7ee4b91219321b7f6633d4617e7f9</string>
+  <key>issue_context_kind</key><string>function</string>
+  <key>issue_context</key><string>node__free</string>
+  <key>issue_hash_function_offset</key><string>4</string>
+  <key>location</key>
+  <dict>
+   <key>line</key><integer>38</integer>
+   <key>col</key><integer>7</integer>
+   <key>file</key><integer>0</integer>
+  </dict>
+  <key>ExecutedLines</key>
+  <dict>
+   <key>0</key>
+   <array>
+    <integer>9</integer>
+    <integer>21</integer>
+    <integer>34</integer>
+    <integer>35</integer>
+    <integer>36</integer>
+    <integer>38</integer>
+    <integer>240</integer>
+    <integer>241</integer>
+    <integer>242</integer>
+    <integer>244</integer>
+    <integer>245</integer>
+    <integer>248</integer>
+    <integer>250</integer>
+    <integer>251</integer>
+    <integer>252</integer>
+    <integer>253</integer>
+    <integer>254</integer>
+    <integer>255</integer>
+    <integer>256</integer>
+    <integer>258</integer>
+    <integer>259</integer>
+    <integer>261</integer>
+    <integer>278</integer>
+    <integer>279</integer>
+    <integer>281</integer>
+    <integer>283</integer>
+    <integer>286</integer>
+    <integer>287</integer>
+    <integer>288</integer>
+   </array>
+   <key>1</key>
+   <array>
+    <integer>541</integer>
+    <integer>542</integer>
+    <integer>543</integer>
+    <integer>544</integer>
+    <integer>550</integer>
+   </array>
+   <key>2</key>
+   <array>
+    <integer>115</integer>
+    <integer>116</integer>
+    <integer>117</integer>
+    <integer>121</integer>
+    <integer>667</integer>
+    <integer>668</integer>
+    <integer>669</integer>
+    <integer>670</integer>
+    <integer>673</integer>
+    <integer>674</integer>
+    <integer>675</integer>
+    <integer>740</integer>
+    <integer>741</integer>
+    <integer>742</integer>
+    <integer>762</integer>
+    <integer>763</integer>
+    <integer>764</integer>
+   </array>
+   <key>3</key>
+   <array>
+    <integer>365</integer>
+    <integer>366</integer>
+    <integer>367</integer>
+    <integer>368</integer>
+    <integer>371</integer>
+    <integer>381</integer>
+    <integer>384</integer>
+    <integer>385</integer>
+    <integer>386</integer>
+    <integer>388</integer>
+    <integer>391</integer>
+   </array>
+   <key>4</key>
+   <array>
+    <integer>3771</integer>
+    <integer>3772</integer>
+    <integer>3773</integer>
+    <integer>3774</integer>
+    <integer>3775</integer>
+    <integer>3776</integer>
+    <integer>3859</integer>
+    <integer>3860</integer>
+    <integer>3861</integer>
+    <integer>3862</integer>
+    <integer>4076</integer>
+    <integer>4077</integer>
+    <integer>4078</integer>
+    <integer>4079</integer>
+    <integer>4082</integer>
+   </array>
+   <key>5</key>
+   <array>
+    <integer>46</integer>
+    <integer>47</integer>
+    <integer>48</integer>
+    <integer>49</integer>
+    <integer>51</integer>
+    <integer>452</integer>
+    <integer>453</integer>
+    <integer>454</integer>
+   </array>
+   <key>6</key>
+   <array>
+    <integer>879</integer>
+    <integer>880</integer>
+    <integer>881</integer>
+    <integer>882</integer>
+    <integer>884</integer>
+    <integer>885</integer>
+   </array>
+  </dict>
+  </dict>
  </array>
  <key>files</key>
  <array>
+  <string>main.cpp</string>
+  <string>D:/my_stuff/coding_thingy/installation/compiler/cpp/mingw64/include/c++/14.2.0/x86_64-w64-mingw32/bits/c++config.h</string>
+  <string>D:/my_stuff/coding_thingy/installation/compiler/cpp/mingw64/include/c++/14.2.0/ostream</string>
+  <string>D:/my_stuff/coding_thingy/installation/compiler/cpp/mingw64/include/c++/14.2.0/bits/char_traits.h</string>
+  <string>D:/my_stuff/coding_thingy/installation/compiler/cpp/mingw64/include/c++/14.2.0/bits/basic_string.h</string>
+  <string>D:/my_stuff/coding_thingy/installation/compiler/cpp/mingw64/include/c++/14.2.0/bits/basic_ios.h</string>
+  <string>D:/my_stuff/coding_thingy/installation/compiler/cpp/mingw64/include/c++/14.2.0/bits/locale_facets.h</string>
  </array>
 </dict>
 </plist>
